--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
 				"allowTemplateLiterals": true
 			}
 		],
-		"indent": ["error", "tab"]
+		"indent": ["error", "tab"],
+		"react/prop-types": 1
 	}
 }
