--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "firebase": "^9.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "vite-plugin-svgr": "^2.2.1"
   },
   "devDependencies": {
