--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,21 @@
 		"eslint:recommended",
 		"plugin:react/recommended",
 		"plugin:react-hooks/recommended",
+		"plugin:@typescript-eslint/recommended",
 		"plugin:prettier/recommended"
 	],
+	"settings": {
+		"react": {
+			"version": "detect"
+		},
+		"import/resolver": {
+			"node": {
+				"paths": ["src"],
+				"extensions": [".js", ".jsx", ".ts", ".tsx"]
+			}
+		}
+	},
+	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
 		"ecmaFeatures": {
 			"jsx": true
@@ -17,10 +30,20 @@
 		"ecmaVersion": "latest",
 		"sourceType": "module"
 	},
-	"plugins": ["react"],
+	"plugins": ["react", "@typescript-eslint"],
 	"rules": {
 		"no-console": ["warn", { "allow": ["warn", "error"] }],
-		"no-unused-vars": 1,
-		"react/prop-types": 1
+		"no-unused-vars": "off",
+		"@typescript-eslint/no-unused-vars": ["warn"],
+		"@typescript-eslint/no-explicit-any": ["error", { "ignoreRestArgs": true }],
+		"@typescript-eslint/ban-types": [
+			"error",
+			{
+				"extendDefaults": true,
+				"types": {
+					"Function": false
+				}
+			}
+		]
 	}
 }
