--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "2.7.1",
     "tailwindcss": "^3.1.7",
     "typescript": "^4.7.4",
-    "vite": "^3.0.0"
+    "vite": "^3.0.0",
+    "vite-plugin-pwa": "^0.12.3"
   }
 }
